kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/lognet: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: saadkhan371/hunza:1.0.0
          name: java-api
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
