kube/hunza.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hunza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hunza
  template:
    metadata:
      labels:
        app: hunza
    spec:
      containers:
        - name: app
          image: saadkhan371/hunza:1.0.0
          ports:
            - containerPort: 8081
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hunza
spec:
  selector:
    app: hunza
  ports:
    - port: 8081
      targetPort: 8081
  type: LoadBalancer
